页面引入完毕

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -7,3 +7,14 @@ body{
 img{
     -webkit-user-drag: none;
 }
+
+// 主页样式
+.logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.site-layout .site-layout-background {
+  background: #fff;
+}
